# HEIDIC_V3

./: .gitignore  Cargo.toml  DMAP_CRACKING_ISSUE.md  DMAP_CRACKING_UPDATE.md  LICENSE  README.md  sim.glb  sim2.glb  sim3.glb  sim4.glb  sim5.glb
DOCS/: BETTER_ERROR_MESSAGES_IMPLEMENTATION.md  BUILD_SYSTEM_TODO_OLD_HEIDIC.md  CONVENTIONS_OLD_HEIDIC.md  DDS_TEST_PLAN.md  DDS_TEXTURE_STRATEGY.md  DEBUG_ARCHITECTURE.md  EDEN_VS_HEIDIC.md  EDEN_VULKAN_HELPERS_SUMMARY.md  EXAMPLES.md  FEATURES.md  FPS_COLORED_CUBES_DEBUG_REPORT.md  HEIDIC_ROADMAP.md  HEIROC_SAMPLE.txt  HOT_RELOAD_IMPLEMENTATION_STATUS.md  INSTALL_SDL2.md  INSTALL_SDL3.md  LANGUAGE_REFERENCE.md  LANGUAGE_TWEAK_TODO.md  LIGHTING_ARCHITECTURE_OLD_HEIDIC.md  PHASE1_SUB_STEPS.md  README.md  RESOURCE_SYSTEM_PLAN.md  SETUP_SDL_STRUCTURE.md  SOA_IMPLEMENTATION_PLAN.md  SOA_IMPLEMENTATION_STATUS.md  SPRINT1_IMPLEMENTATION_PLAN.md  VEHICLE_PILOTING_ISSUE_REPORT.md  VULKAN_HELPERS_ANALYSIS.md  index.md
ELECTROSCRIBE/: ARCHITECTURE.md  HEIDIC_ARCHITECTURE.md  REFACTOR_STATUS.md  main.py
ELECTROSCRIBE/PROJECTS/OLD PROJECTS/examples/cmake_example/: CMakeLists.txt  README.md
H_SCRIBE/: README.md  main.py
SCRIBE/: empty.hd  main.py  requirements.txt
examples/: component_framework_example.hd
gateway_editor_v1/: build_gateway_editor_v1.bat  gateway_editor_v1.hd  imgui_layout.ini  level.eden  level2.eden  level3.eden
heiroc_transpiler/: Cargo.toml
mkdocs/: DEPLOYMENT.md  README.md  mkdocs.yml  netlify.toml  requirements-docs.txt  setup-docs.bat  setup-docs.sh  vercel.json
public-docs/: COMMIT_MESSAGE.md  (+8 more)
(+462 files in other folders)
